--- a/index.html
+++ b/index.html
@@ -45,19 +45,14 @@
     
     <div class="card bg-[#EF212D]  z-30">
         <div class="flex items-center gap-4 bg-white p-6">
-            <div  tabindex="0" role="button" class="shopping btn btn-ghost btn-circle">
-                <div class="indicator">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-                  <span class="quantity badge badge-lg bg-[red] text-white indicator-item">0</span>
-                </div>
-              </div>
+           
+            <button class="closeShopping btn btn-primary text-lg font-semibold">Close</button>
             <h1 class=" flex text-xl font-bold text-[#EF212D]">Item</h1>
         </div>
         <ul class="listCard">
         </ul>
         <div class="checkOut">
-            <div class="total">0$</div>
-            <div class="closeShopping">Close</div>
+            <div class="total">0 <span>$</span></div>
         </div>
     </div>
 
