--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="card bg-[#EF212D]  z-30">
         <div class="flex items-center gap-4 bg-white p-6">
            
-            <button class="closeShopping btn btn-primary text-lg font-semibold">Close</button>
-            <h1 class=" flex text-xl font-bold text-[#EF212D]">Item</h1>
+            <button class="closeShopping btn  text-lg font-semibold"><i class="text-2xl fa-solid fa-circle-xmark"></i></button>
+            <h1 class=" flex text-xl font-bold text-[#EF212D]">Cart</h1>
         </div>
         <ul class="listCard">
         </ul>
@@ -61,5 +61,6 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/app.js"></script>
+    <script src="https://kit.fontawesome.com/cb757bc98b.js" crossorigin="anonymous"></script>
 </body>
 </html>
